--- a/index.html
+++ b/index.html
@@ -1,101 +1,137 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>F1 Cash — Simple Business Funding</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses.">
+  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --navy:#0b1220;
-      --ink:#0f172a;
-      --muted:#64748b;
-      --line:#e5e7eb;
-      --accent:#1e90ff; /* electric blue accent */
-      --bg:#ffffff;
+      --bg:#0a0d14;
+      --panel:#0f1522;
+      --line:#1e2740;
+      --ink:#e6ecff;
+      --muted:#92a0c5;
+      --accent:#11b1ff;
+      --accent2:#6ee7ff;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font:16px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
-    .wrap{max-width:980px;margin:0 auto;padding:32px 20px}
-    header{display:flex;align-items:center;justify-content:space-between;padding:8px 0 20px;border-bottom:1px solid var(--line)}
-    .brand{display:flex;align-items:center;gap:12px;text-decoration:none;color:inherit}
-    .logo{
-      width:40px;height:40px;border-radius:10px;
-      background:linear-gradient(145deg,#0d1834 0%,#101b3e 60%,#0b1220 100%);
-      display:grid;place-items:center;box-shadow:0 6px 16px rgba(11,18,32,.15);
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      background:radial-gradient(1100px 800px at 20% -10%, #0c1325 0%, #06080f 70%, #05070d 100%);
+      color:var(--ink);
+      font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      line-height:1.6;
     }
-    .logo:before{
-      content:"F"; font-weight:800; color:#e8eefc; font-size:20px; letter-spacing:.5px;
+    a{color:var(--accent);text-decoration:none}
+    .wrap{max-width:900px;margin:0 auto;padding:32px 20px}
+
+    /* Header */
+    header{display:flex;align-items:center;gap:14px;padding-bottom:22px;border-bottom:1px solid var(--line)}
+    .logo img{width:56px;height:auto;display:block}
+    .brand{display:flex;flex-direction:column;gap:3px}
+    .brand .name{
+      font-family:'Orbitron',sans-serif;font-weight:700;font-size:20px;
+      background:linear-gradient(90deg,var(--accent),var(--accent2));
+      -webkit-background-clip:text;color:transparent;
+      letter-spacing:.8px;
     }
-    .brandname{font-weight:800;letter-spacing:.5px}
-    .tag{color:var(--muted);font-size:14px;margin-top:2px}
-    .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:28px;align-items:center;padding:32px 0}
-    .h1{font-size:40px;line-height:1.15;margin:0 0 12px}
-    .lead{color:var(--muted);font-size:18px;margin:0 0 20px}
-    ul.features{margin:14px 0 26px;padding:0 0 0 18px;color:var(--ink)}
-    .card{
-      border:1px solid var(--line);border-radius:16px;padding:20px;background:#fafcff;
+    .brand .tag{color:var(--muted);font-size:13px}
+
+    /* Hero */
+    .hero{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:32px 0}
+    .hero h1{
+      font-size:38px;font-weight:800;line-height:1.2;margin-bottom:12px;
+      font-family:'Orbitron',sans-serif;
+      background:linear-gradient(90deg,var(--accent),#7dd3fc);
+      -webkit-background-clip:text;color:transparent;
     }
+    .hero p{font-size:18px;color:var(--muted);margin-bottom:16px}
+    ul{margin-left:18px;margin-bottom:22px}
+    ul li{margin-bottom:8px}
     .cta{
-      appearance:none;border:0;border-radius:12px;
-      padding:14px 20px;font-weight:700;letter-spacing:.3px;
-      background:var(--accent);color:#fff;cursor:not-allowed;opacity:.55;
+      background:linear-gradient(90deg,var(--accent),var(--accent2));
+      border:none;border-radius:12px;
+      padding:14px 28px;
+      color:#001320;
+      font-weight:700;
+      cursor:not-allowed;opacity:.7;
+      box-shadow:0 8px 22px rgba(17,177,255,.25);
+      font-family:'Orbitron',sans-serif;
+      letter-spacing:.6px;
     }
-    .cta[disabled]{pointer-events:none}
     .note{font-size:12px;color:var(--muted);margin-top:8px}
-    .divider{height:1px;background:var(--line);margin:24px 0}
-    footer{display:flex;flex-wrap:wrap;gap:12px;justify-content:space-between;align-items:center;color:var(--muted);font-size:14px}
-    .contact a{color:var(--navy);text-decoration:none}
-    @media (max-width:860px){
+    .card{
+      border:1px solid var(--line);border-radius:16px;
+      padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
+      box-shadow:0 12px 30px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)
+    }
+    .card strong{display:block;margin-bottom:10px}
+    .divider{height:1px;background:var(--line);margin:14px 0}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px 18px}
+    .label{color:var(--muted);font-size:13px}
+    .value{font-weight:700}
+
+    footer{
+      display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
+      border-top:1px solid var(--line);
+      margin-top:30px;padding-top:18px;font-size:14px;color:var(--muted)
+    }
+    @media(max-width:860px){
       .hero{grid-template-columns:1fr}
-      .h1{font-size:32px}
+      .hero h1{font-size:30px}
     }
   </style>
 </head>
+
 <body>
   <div class="wrap">
+
+    <!-- Header -->
     <header>
-      <a class="brand" href="#">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <div class="brandname">F1 CASH</div>
-          <div class="tag">Simple Business Funding</div>
-        </div>
-      </a>
+      <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
+      <div class="brand">
+        <div class="name">F1 CASH</div>
+        <div class="tag">Simple Business Funding</div>
+      </div>
     </header>
 
+    <!-- Hero -->
     <section class="hero">
       <div>
-        <h1 class="h1">Fast working capital for small businesses — no collateral, no hassle.</h1>
-        <p class="lead">Get up to $1,000 with a straightforward monthly plan. First payment in 35 days. Clear terms. Human support.</p>
-        <ul class="features">
-          <li>Business owners only — 12+ months in business, active business bank account</li>
-          <li>Simple promissory note &amp; ID/address verification</li>
-          <li>6 equal monthly installments · ACH payments</li>
+        <h1>Fast working capital for small businesses</h1>
+        <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+        <ul>
+          <li>Business owners with 12 + months in operation</li>
+          <li>Simple promissory note after verification</li>
+          <li>6 equal monthly installments</li>
         </ul>
-        <button class="cta" disabled aria-disabled="true" title="Coming soon">APPLY NOW</button>
+        <button class="cta" disabled title="Coming soon">APPLY NOW</button>
         <div class="note">Button disabled for now — application link coming soon.</div>
       </div>
 
-      <div class="card" role="complementary" aria-label="At-a-glance terms">
+      <aside class="card">
         <strong>At-a-glance terms</strong>
         <div class="divider"></div>
-        <div>Typical advance: <b>$300–$1,000</b></div>
-        <div>Schedule: <b>6 monthly payments</b></div>
-        <div>Repayment: <b>ACH you send</b></div>
-        <div>Support: <b>info@f1cash.net</b></div>
-      </div>
+        <div class="grid">
+          <div class="label">Typical advance</div><div class="value">$300 – $1,000</div>
+          <div class="label">Schedule</div><div class="value">6 monthly payments</div>
+          <div class="label">Support</div><div class="value">info@f1cash.net</div>
+          <div class="label">Phone</div><div class="value">+1 229-448-4389</div>
+        </div>
+      </aside>
     </section>
 
-    <div class="divider"></div>
-
     <footer>
-      <div class="contact">
-        ✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> &nbsp;·&nbsp;
-        ☎️ <a href="tel:+12294484389">+1 229-448-4389</a>
-      </div>
+      <div>✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> · ☎️ <a href="tel:+12294484389">+1 229-448-4389</a></div>
       <div>© 2025 F1 Cash · All rights reserved.</div>
     </footer>
   </div>
 </body>
 </html>
+
