--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>F1 Cash — Simple Business Funding</title>
   <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
 
-  <!-- Google Fonts -->
+  <!-- Futuristic fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -29,19 +29,68 @@
       line-height:1.6;
     }
     a{color:var(--accent);text-decoration:none}
-    .wrap{max-width:900px;margin:0 auto;padding:32px 20px}
+    .wrap{max-width:980px;margin:0 auto;padding:32px 20px}
 
     /* Header */
     header{display:flex;align-items:center;gap:14px;padding-bottom:22px;border-bottom:1px solid var(--line)}
-    .logo img{width:56px;height:auto;display:block}
     .brand{display:flex;flex-direction:column;gap:3px}
-    .brand .name{
+    .name{
       font-family:'Orbitron',sans-serif;font-weight:700;font-size:20px;
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      -webkit-background-clip:text;color:transparent;
+      -webkit-background-clip:text;background-clip:text;color:transparent;
       letter-spacing:.8px;
     }
-    .brand .tag{color:var(--muted);font-size:13px}
+    .name.fx-gradient{background-size:200% 100%;animation:shine 3800ms ease-in-out infinite}
+    @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    .tag{color:var(--muted);font-size:13px}
+
+    /* Logo — bigger, blended, animated sweeps */
+    .logo{display:grid;place-items:center}
+    .fx-logo{
+      position:relative;
+      width:84px;              /* adjust for size */
+      padding:8px;
+      border-radius:16px;
+      background:linear-gradient(145deg,#0f1b32,#0b1327);
+      box-shadow:
+        0 14px 36px rgba(17,177,255,.18),
+        inset 0 0 0 1px rgba(255,255,255,.04),
+        0 0 0 1px rgba(17,177,255,.06);
+      overflow:hidden;
+      isolation:isolate;
+    }
+    .fx-logo img{display:block;width:100%;height:auto;filter:drop-shadow(0 4px 8px rgba(0,0,0,.45))}
+    .fx-logo::before,.fx-logo::after{
+      content:"";position:absolute;inset:-10%;
+      background:linear-gradient(90deg,
+        rgba(17,177,255,0) 0%,
+        rgba(17,177,255,.28) 45%,
+        rgba(110,231,255,.35) 55%,
+        rgba(17,177,255,0) 100%);
+      mix-blend-mode:screen;opacity:.55;border-radius:20px;
+    }
+    .fx-logo::before{transform:translateX(-120%);animation:logoSweepLeft 4200ms ease-in-out 0ms infinite}
+    .fx-logo::after{transform:translateX(120%);animation:logoSweepRight 4200ms ease-in-out 2100ms infinite}
+    @keyframes logoSweepLeft{
+      0%{transform:translateX(-120%);opacity:0}
+      20%{opacity:.55}
+      50%{transform:translateX(0%)}
+      80%{opacity:.15}
+      100%{transform:translateX(120%);opacity:0}
+    }
+    @keyframes logoSweepRight{
+      0%{transform:translateX(120%);opacity:0}
+      20%{opacity:.55}
+      50%{transform:translateX(0%)}
+      80%{opacity:.15}
+      100%{transform:translateX(-120%);opacity:0}
+    }
+    .fx-logo:hover{
+      box-shadow:
+        0 18px 44px rgba(17,177,255,.28),
+        inset 0 0 0 1px rgba(255,255,255,.05),
+        0 0 0 1px rgba(17,177,255,.12);
+    }
 
     /* Hero */
     .hero{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:32px 0}
@@ -49,23 +98,13 @@
       font-size:38px;font-weight:800;line-height:1.2;margin-bottom:12px;
       font-family:'Orbitron',sans-serif;
       background:linear-gradient(90deg,var(--accent),#7dd3fc);
-      -webkit-background-clip:text;color:transparent;
+      -webkit-background-clip:text;background-clip:text;color:transparent;
     }
     .hero p{font-size:18px;color:var(--muted);margin-bottom:16px}
     ul{margin-left:18px;margin-bottom:22px}
     ul li{margin-bottom:8px}
-    .cta{
-      background:linear-gradient(90deg,var(--accent),var(--accent2));
-      border:none;border-radius:12px;
-      padding:14px 28px;
-      color:#001320;
-      font-weight:700;
-      cursor:not-allowed;opacity:.7;
-      box-shadow:0 8px 22px rgba(17,177,255,.25);
-      font-family:'Orbitron',sans-serif;
-      letter-spacing:.6px;
-    }
-    .note{font-size:12px;color:var(--muted);margin-top:8px}
+
+    /* Card */
     .card{
       border:1px solid var(--line);border-radius:16px;
       padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
@@ -77,6 +116,18 @@
     .label{color:var(--muted);font-size:13px}
     .value{font-weight:700}
 
+    /* CTA */
+    .cta{
+      background:linear-gradient(90deg,var(--accent),var(--accent2));
+      border:none;border-radius:12px;
+      padding:14px 28px;color:#001320;font-weight:700;
+      cursor:not-allowed;opacity:.7;
+      box-shadow:0 8px 22px rgba(17,177,255,.25);
+      font-family:'Orbitron',sans-serif;letter-spacing:.6px;
+    }
+    .note{font-size:12px;color:var(--muted);margin-top:8px}
+
+    /* Footer */
     footer{
       display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
       border-top:1px solid var(--line);
@@ -85,18 +136,19 @@
     @media(max-width:860px){
       .hero{grid-template-columns:1fr}
       .hero h1{font-size:30px}
+      .fx-logo{width:72px}
     }
   </style>
 </head>
-
 <body>
   <div class="wrap">
-
     <!-- Header -->
     <header>
-      <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
+      <div class="logo fx-logo" aria-hidden="true">
+        <img src="assets/logo.png" alt="F1 Cash logo">
+      </div>
       <div class="brand">
-        <div class="name">F1 CASH</div>
+        <div class="name fx-gradient">F1 CASH</div>
         <div class="tag">Simple Business Funding</div>
       </div>
     </header>
@@ -115,7 +167,7 @@
         <div class="note">Button disabled for now — application link coming soon.</div>
       </div>
 
-      <aside class="card">
+      <aside class="card" role="complementary" aria-label="At-a-glance terms">
         <strong>At-a-glance terms</strong>
         <div class="divider"></div>
         <div class="grid">
@@ -134,4 +186,3 @@
   </div>
 </body>
 </html>
-
