--- a/index.html
+++ b/index.html
@@ -6,20 +6,14 @@
   <title>F1 Cash — Simple Business Funding</title>
   <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
 
-  <!-- Futuristic fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --bg:#0a0d14;
-      --panel:#0f1522;
-      --line:#1e2740;
-      --ink:#e6ecff;
-      --muted:#92a0c5;
-      --accent:#11b1ff;
-      --accent2:#6ee7ff;
+      --bg:#0a0d14; --panel:#0f1522; --line:#1e2740;
+      --ink:#e6ecff; --muted:#92a0c5; --accent:#11b1ff; --accent2:#6ee7ff;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     body{
@@ -37,66 +31,38 @@
     .name{
       font-family:'Orbitron',sans-serif;font-weight:700;font-size:20px;
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      -webkit-background-clip:text;background-clip:text;color:transparent;
-      letter-spacing:.8px;
+      -webkit-background-clip:text;background-clip:text;color:transparent;letter-spacing:.8px;
+      background-size:200% 100%; animation:shine 3800ms ease-in-out infinite;
     }
-    .name.fx-gradient{background-size:200% 100%;animation:shine 3800ms ease-in-out infinite}
     @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     .tag{color:var(--muted);font-size:13px}
 
-    /* Logo — bigger, blended, animated sweeps */
+    /* Logo — bigger, blended, animated sweeps, with neutral badge */
     .logo{display:grid;place-items:center}
     .fx-logo{
-      position:relative;
-      width:84px;              /* adjust for size */
-      padding:8px;
-      border-radius:16px;
+      position:relative; width:96px; padding:10px; border-radius:18px;
       background:linear-gradient(145deg,#0f1b32,#0b1327);
-      box-shadow:
-        0 14px 36px rgba(17,177,255,.18),
-        inset 0 0 0 1px rgba(255,255,255,.04),
-        0 0 0 1px rgba(17,177,255,.06);
-      overflow:hidden;
-      isolation:isolate;
+      box-shadow:0 14px 36px rgba(17,177,255,.18), inset 0 0 0 1px rgba(255,255,255,.04), 0 0 0 1px rgba(17,177,255,.06);
+      overflow:hidden; isolation:isolate;
     }
-    /* Make dark logo pop on dark background: invert + cyan tint + glow */
-    .fx-logo img{
-      display:block;width:100%;height:auto;
-      filter:brightness(0) invert(1) saturate(2)
-             hue-rotate(180deg)
-             drop-shadow(0 4px 10px rgba(17,177,255,.45));
+    /* light badge behind the logo for contrast (works with dark/original logo) */
+    .fx-logo::marker{content:"";} /* silence some mobile render quirks */
+    .fx-logo .badge{
+      position:absolute; inset:8px; border-radius:14px;
+      background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
+      box-shadow:inset 0 0 1px rgba(255,255,255,.25);
+      z-index:0;
     }
+    .fx-logo img{position:relative; z-index:1; display:block; width:100%; height:auto; filter:drop-shadow(0 4px 10px rgba(0,0,0,.45))}
     .fx-logo::before,.fx-logo::after{
-      content:"";position:absolute;inset:-10%;
-      background:linear-gradient(90deg,
-        rgba(17,177,255,0) 0%,
-        rgba(17,177,255,.28) 45%,
-        rgba(110,231,255,.35) 55%,
-        rgba(17,177,255,0) 100%);
-      mix-blend-mode:screen;opacity:.55;border-radius:20px;
+      content:""; position:absolute; inset:-10%;
+      background:linear-gradient(90deg, rgba(17,177,255,0) 0%, rgba(17,177,255,.28) 45%, rgba(110,231,255,.35) 55%, rgba(17,177,255,0) 100%);
+      mix-blend-mode:screen; opacity:.45; border-radius:20px; z-index:2;
     }
-    .fx-logo::before{transform:translateX(-120%);animation:logoSweepLeft 4200ms ease-in-out 0ms infinite}
-    .fx-logo::after{transform:translateX(120%);animation:logoSweepRight 4200ms ease-in-out 2100ms infinite}
-    @keyframes logoSweepLeft{
-      0%{transform:translateX(-120%);opacity:0}
-      20%{opacity:.55}
-      50%{transform:translateX(0%)}
-      80%{opacity:.15}
-      100%{transform:translateX(120%);opacity:0}
-    }
-    @keyframes logoSweepRight{
-      0%{transform:translateX(120%);opacity:0}
-      20%{opacity:.55}
-      50%{transform:translateX(0%)}
-      80%{opacity:.15}
-      100%{transform:translateX(-120%);opacity:0}
-    }
-    .fx-logo:hover{
-      box-shadow:
-        0 18px 44px rgba(17,177,255,.28),
-        inset 0 0 0 1px rgba(255,255,255,.05),
-        0 0 0 1px rgba(17,177,255,.12);
-    }
+    .fx-logo::before{transform:translateX(-120%); animation:logoSweepLeft 4200ms ease-in-out 0ms infinite}
+    .fx-logo::after {transform:translateX(120%);  animation:logoSweepRight 4200ms ease-in-out 2100ms infinite}
+    @keyframes logoSweepLeft {0%{transform:translateX(-120%);opacity:0}20%{opacity:.45}50%{transform:translateX(0%)}80%{opacity:.12}100%{transform:translateX(120%);opacity:0}}
+    @keyframes logoSweepRight{0%{transform:translateX(120%);opacity:0}20%{opacity:.45}50%{transform:translateX(0%)}80%{opacity:.12}100%{transform:translateX(-120%);opacity:0}}
 
     /* Hero */
     .hero{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:32px 0}
@@ -107,28 +73,24 @@
       -webkit-background-clip:text;background-clip:text;color:transparent;
     }
     .hero p{font-size:18px;color:var(--muted);margin-bottom:16px}
-    ul{margin-left:18px;margin-bottom:22px}
-    ul li{margin-bottom:8px}
+    ul{margin-left:18px;margin-bottom:22px} ul li{margin-bottom:8px}
 
     /* Card */
     .card{
-      border:1px solid var(--line);border-radius:16px;
-      padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
-      box-shadow:0 12px 30px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)
+      border:1px solid var(--line);border-radius:16px;padding:22px;
+      background:linear-gradient(180deg,#0e1322,#0d1220);
+      box-shadow:0 12px 30px rgba(0,0,0,.35), inset 0 0 1px rgba(255,255,255,.05)
     }
     .card strong{display:block;margin-bottom:10px}
     .divider{height:1px;background:var(--line);margin:14px 0}
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px 18px}
-    .label{color:var(--muted);font-size:13px}
-    .value{font-weight:700}
+    .label{color:var(--muted);font-size:13px} .value{font-weight:700}
 
     /* CTA */
     .cta{
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      border:none;border-radius:12px;
-      padding:14px 28px;color:#001320;font-weight:700;
-      cursor:not-allowed;opacity:.7;
-      box-shadow:0 8px 22px rgba(17,177,255,.25);
+      border:none;border-radius:12px;padding:14px 28px;color:#001320;font-weight:700;
+      cursor:not-allowed;opacity:.7;box-shadow:0 8px 22px rgba(17,177,255,.25);
       font-family:'Orbitron',sans-serif;letter-spacing:.6px;
     }
     .note{font-size:12px;color:var(--muted);margin-top:8px}
@@ -136,13 +98,17 @@
     /* Footer */
     footer{
       display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
-      border-top:1px solid var(--line);
-      margin-top:30px;padding-top:18px;font-size:14px;color:var(--muted)
+      border-top:1px solid var(--line); margin-top:30px;padding-top:18px;
+      font-size:14px;color:var(--muted)
     }
-    @media(max-width:860px){
+    @media (max-width:860px){
       .hero{grid-template-columns:1fr}
       .hero h1{font-size:30px}
-      .fx-logo{width:72px}
+      .fx-logo{width:80px}
+    }
+    @media (prefers-reduced-motion: reduce){
+      .fx-logo::before,.fx-logo::after{animation:none}
+      .name{animation:none}
     }
   </style>
 </head>
@@ -151,10 +117,11 @@
     <!-- Header -->
     <header>
       <div class="logo fx-logo" aria-hidden="true">
+        <span class="badge" aria-hidden="true"></span>
         <img src="assets/logo.png" alt="F1 Cash logo">
       </div>
       <div class="brand">
-        <div class="name fx-gradient">F1 CASH</div>
+        <div class="name">F1 CASH</div>
         <div class="tag">Simple Business Funding</div>
       </div>
     </header>
