--- a/index.html
+++ b/index.html
@@ -6,109 +6,190 @@
   <title>F1 Cash — Simple Business Funding</title>
   <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
 
+  <!-- Futuristic fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --bg:#0a0d14; --panel:#0f1522; --line:#1e2740;
-      --ink:#e6ecff; --muted:#92a0c5; --accent:#11b1ff; --accent2:#6ee7ff;
+      --bg-1:#05070d; --bg-2:#0b1220; --panel:#0f1522;
+      --line:#1e2740; --ink:#e6ecff; --muted:#8ea2c9;
+      --accent:#11b1ff; --accent2:#6ee7ff; --glow: rgba(17,177,255,.25);
     }
+
+    /* Base & sticky footer layout */
     *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
     body{
-      background:radial-gradient(1100px 800px at 20% -10%, #0c1325 0%, #06080f 70%, #05070d 100%);
+      min-height:100vh;            /* fill full viewport */
+      display:flex;                /* sticky footer layout */
+      flex-direction:column;       /* content then footer */
       color:var(--ink);
-      font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
       line-height:1.6;
+      background:
+        radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
+        linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      overflow-x:hidden;
     }
-    a{color:var(--accent);text-decoration:none}
-    .wrap{max-width:980px;margin:0 auto;padding:32px 20px}
+
+    /* Ambient moving sheen (subtle) */
+    body::before{
+      content:"";
+      position:fixed; inset:-20% -20% -20% -20%;
+      background:
+        radial-gradient(60% 40% at 20% 20%, rgba(17,177,255,.08), transparent 60%),
+        radial-gradient(50% 35% at 80% 10%, rgba(110,231,255,.06), transparent 60%),
+        radial-gradient(60% 45% at 60% 80%, rgba(17,177,255,.05), transparent 70%);
+      animation:floatSheen 26s ease-in-out infinite alternate;
+      pointer-events:none; z-index:-1; filter:saturate(1.1);
+    }
+    @keyframes floatSheen{
+      0%  { transform:translate3d(0,0,0) scale(1);}
+      50% { transform:translate3d(-2%,1%,0) scale(1.03);}
+      100%{ transform:translate3d(2%,-1%,0) scale(1.02);}
+    }
+
+    .wrap{
+      max-width:1080px;
+      margin:0 auto;
+      padding:28px 18px;
+      flex:1;                      /* 👈 pushes footer to bottom */
+      width:100%;
+    }
 
     /* Header */
-    header{display:flex;align-items:center;gap:14px;padding-bottom:22px;border-bottom:1px solid var(--line)}
+    header{
+      display:flex;align-items:center;gap:16px;
+      padding:10px 0 22px;
+      border-bottom:1px solid var(--line);
+      backdrop-filter:saturate(120%);
+    }
+
+    /* Logo block with glow + sweep */
+    .logo{display:grid;place-items:center}
+    .fx-logo{
+      position:relative; width:96px; padding:10px; border-radius:20px;
+      background:linear-gradient(145deg,#0e1730,#0a1327);
+      box-shadow:
+        0 18px 36px var(--glow),
+        0 2px 0 rgba(255,255,255,.02) inset,
+        0 0 0 1px rgba(17,177,255,.1);
+      overflow:hidden; isolation:isolate;
+    }
+    .fx-logo .badge{
+      position:absolute; inset:10px; border-radius:14px;
+      background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
+      box-shadow:inset 0 0 1px rgba(255,255,255,.25);
+      z-index:0; filter:blur(.2px);
+    }
+    .fx-logo img{
+      position:relative; z-index:1; display:block; width:100%; height:auto;
+      filter:drop-shadow(0 6px 12px rgba(0,0,0,.45))
+    }
+    .fx-logo::before,.fx-logo::after{
+      content:""; position:absolute; inset:-12%;
+      background:linear-gradient(90deg,
+        rgba(17,177,255,0) 0%,
+        rgba(17,177,255,.28) 45%,
+        rgba(110,231,255,.35) 55%,
+        rgba(17,177,255,0) 100%);
+      mix-blend-mode:screen; opacity:.42; border-radius:22px; z-index:2;
+    }
+    .fx-logo::before{transform:translateX(-120%); animation:logoSweepLeft 5.2s ease-in-out .2s infinite}
+    .fx-logo::after {transform:translateX(120%);  animation:logoSweepRight 5.2s ease-in-out 2.8s infinite}
+    @keyframes logoSweepLeft {0%{transform:translateX(-120%);opacity:0}15%{opacity:.42}50%{transform:translateX(0%)}85%{opacity:.12}100%{transform:translateX(120%);opacity:0}}
+    @keyframes logoSweepRight{0%{transform:translateX(120%);opacity:0}15%{opacity:.42}50%{transform:translateX(0%)}85%{opacity:.12}100%{transform:translateX(-120%);opacity:0}}
+
     .brand{display:flex;flex-direction:column;gap:3px}
     .name{
-      font-family:'Orbitron',sans-serif;font-weight:700;font-size:20px;
+      font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      -webkit-background-clip:text;background-clip:text;color:transparent;letter-spacing:.8px;
-      background-size:200% 100%; animation:shine 3800ms ease-in-out infinite;
+      -webkit-background-clip:text;background-clip:text;color:transparent;
+      background-size:220% 100%;
+      animation:shine 4.2s ease-in-out infinite;
+      text-shadow:0 0 18px rgba(17,177,255,.12);
     }
     @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     .tag{color:var(--muted);font-size:13px}
 
-    /* Logo — bigger, blended, animated sweeps, with neutral badge */
-    .logo{display:grid;place-items:center}
-    .fx-logo{
-      position:relative; width:96px; padding:10px; border-radius:18px;
-      background:linear-gradient(145deg,#0f1b32,#0b1327);
-      box-shadow:0 14px 36px rgba(17,177,255,.18), inset 0 0 0 1px rgba(255,255,255,.04), 0 0 0 1px rgba(17,177,255,.06);
-      overflow:hidden; isolation:isolate;
-    }
-    /* light badge behind the logo for contrast (works with dark/original logo) */
-    .fx-logo::marker{content:"";} /* silence some mobile render quirks */
-    .fx-logo .badge{
-      position:absolute; inset:8px; border-radius:14px;
-      background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
-      box-shadow:inset 0 0 1px rgba(255,255,255,.25);
-      z-index:0;
-    }
-    .fx-logo img{position:relative; z-index:1; display:block; width:100%; height:auto; filter:drop-shadow(0 4px 10px rgba(0,0,0,.45))}
-    .fx-logo::before,.fx-logo::after{
-      content:""; position:absolute; inset:-10%;
-      background:linear-gradient(90deg, rgba(17,177,255,0) 0%, rgba(17,177,255,.28) 45%, rgba(110,231,255,.35) 55%, rgba(17,177,255,0) 100%);
-      mix-blend-mode:screen; opacity:.45; border-radius:20px; z-index:2;
-    }
-    .fx-logo::before{transform:translateX(-120%); animation:logoSweepLeft 4200ms ease-in-out 0ms infinite}
-    .fx-logo::after {transform:translateX(120%);  animation:logoSweepRight 4200ms ease-in-out 2100ms infinite}
-    @keyframes logoSweepLeft {0%{transform:translateX(-120%);opacity:0}20%{opacity:.45}50%{transform:translateX(0%)}80%{opacity:.12}100%{transform:translateX(120%);opacity:0}}
-    @keyframes logoSweepRight{0%{transform:translateX(120%);opacity:0}20%{opacity:.45}50%{transform:translateX(0%)}80%{opacity:.12}100%{transform:translateX(-120%);opacity:0}}
-
     /* Hero */
-    .hero{display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center;padding:32px 0}
-    .hero h1{
-      font-size:38px;font-weight:800;line-height:1.2;margin-bottom:12px;
-      font-family:'Orbitron',sans-serif;
+    .hero{
+      display:grid;grid-template-columns:1.1fr .9fr;gap:32px;align-items:center;
+      padding:34px 0 28px 0;
+    }
+    .h1{
+      font:800 44px/1.12 'Orbitron',sans-serif;
+      margin:0 0 12px; letter-spacing:.3px;
       background:linear-gradient(90deg,var(--accent),#7dd3fc);
       -webkit-background-clip:text;background-clip:text;color:transparent;
+      filter:drop-shadow(0 6px 18px rgba(17,177,255,.12));
+      opacity:0; transform:translateY(8px);
+      animation:reveal .9s ease-out .2s forwards;
     }
-    .hero p{font-size:18px;color:var(--muted);margin-bottom:16px}
-    ul{margin-left:18px;margin-bottom:22px} ul li{margin-bottom:8px}
+    @keyframes reveal{to{opacity:1; transform:translateY(0)}}
+    .lead{font-size:18px;color:var(--muted);margin:0 0 18px}
+    ul{margin-left:18px;margin-bottom:24px}
+    ul li{margin-bottom:9px}
 
     /* Card */
     .card{
-      border:1px solid var(--line);border-radius:16px;padding:22px;
-      background:linear-gradient(180deg,#0e1322,#0d1220);
-      box-shadow:0 12px 30px rgba(0,0,0,.35), inset 0 0 1px rgba(255,255,255,.05)
+      border:1px solid var(--line);border-radius:18px;
+      padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
+      box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05);
+      transform:translateY(2px);
+      transition:transform .35s ease, box-shadow .35s ease;
     }
+    .card:hover{transform:translateY(0); box-shadow:0 28px 60px rgba(17,177,255,.14),inset 0 0 1px rgba(255,255,255,.06)}
     .card strong{display:block;margin-bottom:10px}
     .divider{height:1px;background:var(--line);margin:14px 0}
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px 18px}
-    .label{color:var(--muted);font-size:13px} .value{font-weight:700}
+    .label{color:var(--muted);font-size:13px}
+    .value{font-weight:700}
 
     /* CTA */
     .cta{
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      border:none;border-radius:12px;padding:14px 28px;color:#001320;font-weight:700;
-      cursor:not-allowed;opacity:.7;box-shadow:0 8px 22px rgba(17,177,255,.25);
-      font-family:'Orbitron',sans-serif;letter-spacing:.6px;
+      border:none;border-radius:14px;
+      padding:14px 28px;color:#001320;font-weight:800;
+      cursor:not-allowed;opacity:.78;
+      box-shadow:0 12px 28px rgba(17,177,255,.28), 0 0 0 1px rgba(255,255,255,.06) inset;
+      font-family:'Orbitron',sans-serif;letter-spacing:.7px;
+      transform:translateY(0); transition:transform .25s ease, box-shadow .25s ease;
     }
+    .cta:hover{transform:translateY(-1px); box-shadow:0 16px 34px rgba(17,177,255,.32), 0 0 0 1px rgba(255,255,255,.07) inset}
     .note{font-size:12px;color:var(--muted);margin-top:8px}
 
-    /* Footer */
+    /* Footer (sticks to bottom due to body flex) */
     footer{
       display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
-      border-top:1px solid var(--line); margin-top:30px;padding-top:18px;
-      font-size:14px;color:var(--muted)
+      border-top:1px solid var(--line);
+      padding:18px; font-size:14px; color:var(--muted)
     }
-    @media (max-width:860px){
+    footer a{color:var(--ink); position:relative}
+    footer a::after{
+      content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
+      background:linear-gradient(90deg,transparent,var(--accent),transparent);
+      transform:scaleX(0); transform-origin:center; transition:transform .3s ease;
+    }
+    footer a:hover::after{ transform:scaleX(1) }
+
+    /* Responsive */
+    @media (max-width:960px){
+      .wrap{padding:24px 16px}
       .hero{grid-template-columns:1fr}
-      .hero h1{font-size:30px}
-      .fx-logo{width:80px}
+      .h1{font-size:36px}
+      .fx-logo{width:84px}
     }
+    @media (max-width:520px){
+      .h1{font-size:30px}
+      .grid{grid-template-columns:1fr}
+    }
+
+    /* Accessibility: reduced motion */
     @media (prefers-reduced-motion: reduce){
-      .fx-logo::before,.fx-logo::after{animation:none}
-      .name{animation:none}
+      body::before, .fx-logo::before, .fx-logo::after, .name, .h1 { animation:none }
     }
   </style>
 </head>
@@ -129,8 +210,8 @@
     <!-- Hero -->
     <section class="hero">
       <div>
-        <h1>Fast working capital for small businesses</h1>
-        <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+        <h1 class="h1">Fast working capital for small businesses</h1>
+        <p class="lead">Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
         <ul>
           <li>Business owners with 12 + months in operation</li>
           <li>Simple promissory note after verification</li>
@@ -151,11 +232,12 @@
         </div>
       </aside>
     </section>
-
-    <footer>
-      <div>✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> · ☎️ <a href="tel:+12294484389">+1 229-448-4389</a></div>
-      <div>© 2025 F1 Cash · All rights reserved.</div>
-    </footer>
   </div>
+
+  <!-- Footer (always at bottom) -->
+  <footer>
+    <div>✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> · ☎️ <a href="tel:+12294484389">+1 229-448-4389</a></div>
+    <div>© 2025 F1 Cash · All rights reserved.</div>
+  </footer>
 </body>
 </html>
