--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
     body{
-      min-height:100vh;            /* fill full viewport */
-      display:flex;                /* sticky footer layout */
-      flex-direction:column;       /* content then footer */
+      min-height:100vh; display:flex; flex-direction:column;
       color:var(--ink);
       font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
       line-height:1.6;
@@ -45,25 +43,14 @@
       animation:floatSheen 26s ease-in-out infinite alternate;
       pointer-events:none; z-index:-1; filter:saturate(1.1);
     }
-    @keyframes floatSheen{
-      0%  { transform:translate3d(0,0,0) scale(1);}
-      50% { transform:translate3d(-2%,1%,0) scale(1.03);}
-      100%{ transform:translate3d(2%,-1%,0) scale(1.02);}
-    }
+    @keyframes floatSheen{0%{transform:translate3d(0,0,0) scale(1)}50%{transform:translate3d(-2%,1%,0) scale(1.03)}100%{transform:translate3d(2%,-1%,0) scale(1.02)}}
 
-    .wrap{
-      max-width:1080px;
-      margin:0 auto;
-      padding:28px 18px;
-      flex:1;                      /* 👈 pushes footer to bottom */
-      width:100%;
-    }
+    .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%}
 
     /* Header */
     header{
       display:flex;align-items:center;gap:16px;
-      padding:10px 0 22px;
-      border-bottom:1px solid var(--line);
+      padding:10px 0 22px;border-bottom:1px solid var(--line);
       backdrop-filter:saturate(120%);
     }
 
@@ -78,15 +65,19 @@
         0 0 0 1px rgba(17,177,255,.1);
       overflow:hidden; isolation:isolate;
     }
+    /* light badge behind logo */
     .fx-logo .badge{
       position:absolute; inset:10px; border-radius:14px;
       background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
       box-shadow:inset 0 0 1px rgba(255,255,255,.25);
       z-index:0; filter:blur(.2px);
     }
+    /* ✨ Critical blend rules */
     .fx-logo img{
       position:relative; z-index:1; display:block; width:100%; height:auto;
-      filter:drop-shadow(0 6px 12px rgba(0,0,0,.45))
+      border-radius:14px;                 /* soften any image edges */
+      mix-blend-mode:screen;              /* treats dark pixels as transparent */
+      filter:drop-shadow(0 6px 12px rgba(0,0,0,.45));
     }
     .fx-logo::before,.fx-logo::after{
       content:""; position:absolute; inset:-12%;
@@ -115,44 +106,35 @@
     .tag{color:var(--muted);font-size:13px}
 
     /* Hero */
-    .hero{
-      display:grid;grid-template-columns:1.1fr .9fr;gap:32px;align-items:center;
-      padding:34px 0 28px 0;
-    }
+    .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:32px;align-items:center;padding:34px 0 28px 0}
     .h1{
-      font:800 44px/1.12 'Orbitron',sans-serif;
-      margin:0 0 12px; letter-spacing:.3px;
+      font:800 44px/1.12 'Orbitron',sans-serif;margin:0 0 12px;letter-spacing:.3px;
       background:linear-gradient(90deg,var(--accent),#7dd3fc);
       -webkit-background-clip:text;background-clip:text;color:transparent;
       filter:drop-shadow(0 6px 18px rgba(17,177,255,.12));
-      opacity:0; transform:translateY(8px);
-      animation:reveal .9s ease-out .2s forwards;
+      opacity:0; transform:translateY(8px); animation:reveal .9s ease-out .2s forwards;
     }
     @keyframes reveal{to{opacity:1; transform:translateY(0)}}
     .lead{font-size:18px;color:var(--muted);margin:0 0 18px}
-    ul{margin-left:18px;margin-bottom:24px}
-    ul li{margin-bottom:9px}
+    ul{margin-left:18px;margin-bottom:24px} ul li{margin-bottom:9px}
 
     /* Card */
     .card{
       border:1px solid var(--line);border-radius:18px;
       padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
       box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05);
-      transform:translateY(2px);
-      transition:transform .35s ease, box-shadow .35s ease;
+      transform:translateY(2px); transition:transform .35s ease, box-shadow .35s ease;
     }
     .card:hover{transform:translateY(0); box-shadow:0 28px 60px rgba(17,177,255,.14),inset 0 0 1px rgba(255,255,255,.06)}
     .card strong{display:block;margin-bottom:10px}
     .divider{height:1px;background:var(--line);margin:14px 0}
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px 18px}
-    .label{color:var(--muted);font-size:13px}
-    .value{font-weight:700}
+    .label{color:var(--muted);font-size:13px}.value{font-weight:700}
 
     /* CTA */
     .cta{
       background:linear-gradient(90deg,var(--accent),var(--accent2));
-      border:none;border-radius:14px;
-      padding:14px 28px;color:#001320;font-weight:800;
+      border:none;border-radius:14px;padding:14px 28px;color:#001320;font-weight:800;
       cursor:not-allowed;opacity:.78;
       box-shadow:0 12px 28px rgba(17,177,255,.28), 0 0 0 1px rgba(255,255,255,.06) inset;
       font-family:'Orbitron',sans-serif;letter-spacing:.7px;
@@ -161,7 +143,7 @@
     .cta:hover{transform:translateY(-1px); box-shadow:0 16px 34px rgba(17,177,255,.32), 0 0 0 1px rgba(255,255,255,.07) inset}
     .note{font-size:12px;color:var(--muted);margin-top:8px}
 
-    /* Footer (sticks to bottom due to body flex) */
+    /* Footer */
     footer{
       display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
       border-top:1px solid var(--line);
@@ -234,7 +216,7 @@
     </section>
   </div>
 
-  <!-- Footer (always at bottom) -->
+  <!-- Footer (sticky) -->
   <footer>
     <div>✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> · ☎️ <a href="tel:+12294484389">+1 229-448-4389</a></div>
     <div>© 2025 F1 Cash · All rights reserved.</div>
