--- a/index.html
+++ b/index.html
@@ -27,21 +27,20 @@
         radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
       overflow-x:hidden; font-family:'Inter',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+      cursor:none; /* hide default cursor for custom glow */
     }
 
-    /* Splash */
+    /* ===== Splash ===== */
     .splash{position:fixed; inset:0; z-index:9999; display:grid; place-items:center; background:
       radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
       linear-gradient(120deg, var(--bg-1), var(--bg-2));
       transition:opacity .8s ease, visibility .8s ease}
     .splash__logo{width:220px; height:auto; border-radius:22px; box-shadow:0 0 50px rgba(17,177,255,.45), 0 0 0 2px rgba(255,255,255,.08) inset; animation:logoPulse 1.4s ease-in-out infinite}
     @keyframes logoPulse{0%,100%{transform:scale(1); filter:drop-shadow(0 0 22px rgba(17,177,255,.38))}50%{transform:scale(1.14); filter:drop-shadow(0 0 44px rgba(17,177,255,.65))}}
-    /* Smooth fade-out with slight scale + mask vignette */
     .splash.is-fading{animation:fadeAway .9s cubic-bezier(.22,.61,.36,1) forwards}
     @keyframes fadeAway{0%{opacity:1; transform:none}70%{opacity:.35; transform:scale(1.02)}100%{opacity:0; transform:scale(1.04)}}
-    .splash.is-hidden{opacity:0; visibility:hidden}
 
-    /* Stage & reveal (smooth fade/slide/blur) */
+    /* ===== Stage & reveal (only after splash ends) ===== */
     .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%}
     .reveal{opacity:0; transform:translateY(18px); filter:blur(6px)}
     .app-ready .reveal{animation:reveal .9s cubic-bezier(.22,.61,.36,1) forwards}
@@ -55,21 +54,20 @@
     .logo-text p{color:var(--muted);font-size:13px}
 
     main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
+    .content{flex:1 1 520px}
     .content.hero{position:relative; overflow:hidden}
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:44px;line-height:1.12;margin:0 0 12px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
-    p{color:#b6c3da;line-height:1.6;margin-bottom:22px;font-size:1.05rem}
-    ul{list-style:disc;margin-left:20px;margin-bottom:22px}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:44px;line-height:1.12;margin:0 0 14px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
+    p{color:#b6c3da;line-height:1.65;margin:0 0 20px;font-size:1.05rem}
+    ul{list-style:disc;margin:0 0 22px 22px}
+    li{margin:6px 0}
 
-    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.9}
+    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap; margin-top:10px}
+    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.95}
     .apply-btn span{font-size:1.1em}
     .note{font-size:12.5px;color:var(--muted);margin:0}
 
-    /* Ensure note is vertically centered to button line */
-    .cta-row{align-items:center}
-
     /* Terms card with parallax glow */
-    .card-wrap{position:relative; flex:1 1 330px}
+    .card-wrap{position:relative; flex:1 1 340px}
     .card-wrap::before{content:""; position:absolute; inset:-16px; z-index:0; pointer-events:none; border-radius:22px; background:radial-gradient(600px 300px at var(--gx,60%) var(--gy,40%), rgba(17,177,255,.14), transparent 60%); transition:background-position .15s ease}
     .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:18px;padding:22px;box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)}
     .card h3{color:#a8dfff;font-size:1.15rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
@@ -89,12 +87,14 @@
     .footer-left,.footer-right{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
     .footer-chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
     .footer-chip svg{width:16px;height:16px}
-    .footer-chip:hover{box-shadow:0 0 0 5px rgba(17,177,255,.05)}
 
-    /* HERO scanline shimmer (runs once on reveal) */
-    .hero::after{content:""; position:absolute; inset:0; pointer-events:none; background:repeating-linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.06) 1px, transparent 1px, transparent 4px); opacity:0; transform:translateY(-20%);}
+    /* HERO scanline shimmer */
+    .hero::after{content:""; position:absolute; inset:0; pointer-events:none; background:repeating-linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.06) 1px, transparent 1px, transparent 4px); opacity:0; transform:translateY(-20%)}
     .app-ready .hero::after{animation:heroShimmer 1.6s ease-out .25s 1 forwards}
     @keyframes heroShimmer{0%{opacity:.0; transform:translateY(-30%)}40%{opacity:.25}80%{opacity:.08}100%{opacity:0; transform:translateY(35%)}}
+
+    /* ===== Custom cursor glow ===== */
+    .cursor-glow{position:fixed; left:0; top:0; width:120px; height:120px; border-radius:50%; pointer-events:none; z-index:9998; transform:translate(-50%, -50%); opacity:.55; background:radial-gradient(60% 60% at 50% 50%, rgba(17,177,255,.25), rgba(17,177,255,.10) 60%, transparent 70%); filter:blur(10px)}
 
     /* Responsive */
     @media (max-width:960px){.wrap{padding:24px 16px} main{flex-direction:column} h2{font-size:36px} .logo img{width:86px}}
@@ -102,6 +102,9 @@
   </style>
 </head>
 <body>
+  <!-- Cursor Glow -->
+  <div class="cursor-glow" id="cursorGlow" aria-hidden="true"></div>
+
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
     <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
@@ -121,7 +124,7 @@
       <div class="content hero reveal delay-2">
         <h2>Fast working capital for small businesses</h2>
         <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
-        <ul>
+        <ul id="typing-list">
           <li>Business owners with 12+ months in operation</li>
           <li>Simple promissory note after verification</li>
           <li>6 equal monthly installments</li>
@@ -180,43 +183,51 @@
   <script>
     (function(){
       var splash = document.getElementById('splash');
+      var typingList = document.getElementById('typing-list');
+      var cursor = document.getElementById('cursorGlow');
       var termsWrap = document.getElementById('terms-wrap');
 
-      function startReveal(){
-        document.body.classList.add('app-ready');
-      }
-
+      /* ===== Splash timing: reveal content ONLY after splash fade ends ===== */
+      function beginApp(){ document.body.classList.add('app-ready'); startTyping(); }
       function fadeOutSplash(){
-        if(!splash) return startReveal();
+        if(!splash){ beginApp(); return; }
         splash.classList.add('is-fading');
-        // After the fade animation, hide it completely
         splash.addEventListener('animationend', function(){
-          splash.classList.add('is-hidden');
+          splash.style.display = 'none';
+          beginApp();
         }, {once:true});
-        startReveal();
       }
-
-      // Parallax glow behind terms card
-      function handleParallax(e){
-        if(!termsWrap) return;
-        var rect = termsWrap.getBoundingClientRect();
-        var x = (e.clientX - rect.left) / rect.width;  // 0..1
-        var y = (e.clientY - rect.top) / rect.height;  // 0..1
-        // Clamp and map to percentages
-        var px = Math.max(0, Math.min(1, x)) * 100;
-        var py = Math.max(0, Math.min(1, y)) * 100;
-        termsWrap.style.setProperty('--gx', px + '%');
-        termsWrap.style.setProperty('--gy', py + '%');
-      }
-
-      // Kickoff after a brief pause so the logo can pulse once
       setTimeout(fadeOutSplash, 950);
 
-      // Live parallax only while pointer is over the wrap
-      document.addEventListener('mousemove', handleParallax, {passive:true});
+      /* ===== Typewriter bullets (sequential) ===== */
+      function startTyping(){
+        if(!typingList) return;
+        var items = Array.from(typingList.querySelectorAll('li'));
+        items.forEach(function(li){ li.setAttribute('data-full', li.textContent.trim()); li.textContent=''; li.style.opacity = 0; });
+        var idx = 0;
+        function typeNext(){
+          if(idx >= items.length) return;
+          var el = items[idx];
+          var txt = el.getAttribute('data-full');
+          el.style.opacity = 1;
+          var i = 0;
+          var step = function(){
+            if(i <= txt.length){ el.textContent = txt.slice(0,i); i++; setTimeout(step, 14); }
+            else { idx++; setTimeout(typeNext, 180); }
+          };
+          step();
+        }
+        typeNext();
+      }
 
-      // Set current year
-      var y = document.getElementById('year'); if(y){ y.textContent = new Date().getFullYear(); }
+      /* ===== Cursor glow follow (smoothed) ===== */
+      var targetX = window.innerWidth/2, targetY = window.innerHeight/2, x = targetX, y = targetY;
+      function animateGlow(){ x += (targetX - x) * 0.18; y += (targetY - y) * 0.18; cursor.style.transform = 'translate('+(x)+'px,'+(y)+'px) translate(-50%,-50%)'; requestAnimationFrame(animateGlow); }
+      animateGlow();
+      window.addEventListener('mousemove', function(e){ targetX = e.clientX; targetY = e.clientY; if(termsWrap){ var r = termsWrap.getBoundingClientRect(); var px = Math.max(0, Math.min(1, (e.clientX - r.left)/r.width))*100; var py = Math.max(0, Math.min(1, (e.clientY - r.top)/r.height))*100; termsWrap.style.setProperty('--gx', px+'%'); termsWrap.style.setProperty('--gy', py+'%'); } }, {passive:true});
+
+      // Set year
+      var yEl = document.getElementById('year'); if(yEl){ yEl.textContent = new Date().getFullYear(); }
     })();
   </script>
 </body>
